k8s/overlays/local/dev-ports.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra-external
  namespace: webhooks
spec:
  type: LoadBalancer
  selector:
    app: cassandra
  ports:
    - port: 9042
      targetPort: 9042
